...
            end = 16.dp,
            bottom = 16.dp,
            top = contentPaddingOnTop
        ),
        verticalArrangement = Arrangement.spacedBy(12.dp),
        modifier = modifier
            .testTag("lazy_list_column")
    ) {
        items(listHSRCharacter, key = { it.id }) { item ->
            HSRCharacterItem(
                id = item.id,
                name = item.name,
                photo = item.photo,
...
